--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-web": "~0.19.10",
     "react-router-native": "^6.27.0",
     "react-native-svg": "15.2.0",
-    "expo-blur": "~13.0.2"
+    "expo-blur": "~13.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
