--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -35,11 +37,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-router-native": "^6.27.0",
     "react-native-svg": "15.2.0",
-    "expo-blur": "~13.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-web": "~0.19.10",
+    "react-router-native": "^6.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
