--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "react-router-native": "^6.27.0"
+    "react-router-native": "^6.27.0",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
